fix columns overflow bug

--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -888,6 +888,7 @@ input:checked + .home__side__bot__cont__darkModOption__slider:before {
 }
 .home__right__header {
   position: fixed;
+  z-index: 1;
   top: 0;
   right: 0;
   left: 321px;
@@ -1007,18 +1008,21 @@ input:checked + .home__side__bot__cont__darkModOption__slider:before {
   background: #ffffff;
 }
 .home__right__main {
+  position: absolute;
   box-sizing: border-box;
   min-height: 100vh;
-  height: 100%;
+  height: auto;
   padding-top: 100px;
   transition: all 120ms ease-in-out;
   width: auto;
+  min-width: 100%;
 }
 .home__right__main__container {
   box-sizing: border-box;
   display: flex;
   min-width: 100%;
   height: 100%;
+  min-height: 800px;
   padding: 25px;
 }
 .home__right__main__container__addBtn {
@@ -1026,6 +1030,7 @@ input:checked + .home__side__bot__cont__darkModOption__slider:before {
   justify-content: center;
   align-items: center;
   min-width: 260px;
+  max-height: 900px;
   border-radius: 8px;
   color: #939CAD;
   cursor: pointer;
