--- a/front/src/sass/pages/_home.scss
+++ b/front/src/sass/pages/_home.scss
@@ -177,6 +177,7 @@
         width: 100%;
         &__header {
             position: fixed;
+            z-index: 1;
             top: 0;
             right: 0;
             left: 321px;
@@ -296,23 +297,27 @@
             }
         }
         &__main {
+            position: absolute;
             box-sizing: border-box;
             min-height: 100vh;
-            height: 100%;
+            height: auto;
             padding-top: 100px;
             transition: all 120ms ease-in-out;
             width: auto;
+            min-width: 100%;
             &__container {
                 box-sizing: border-box;
                 display: flex;
                 min-width: 100%;
                 height: 100%;
+                min-height: 800px;
                 padding: 25px;
                 &__addBtn {
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     min-width: 260px;
+                    max-height: 900px;
                     border-radius: 8px;
                     color: map-get($map: $colors, $key:gray-dark );
                     cursor: pointer;
